--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-<h1>Subdomain Takeover by Irmão</h1>
-<p>Este domínio está vulnerável. Prova de conceito ética.</p>
+<h1>Subdomain Takeover by Irmão 🚨</h1>
